Changes to .interior and .footer-Base to fix up-bleeding scrunched up footer bug on dashboard

--- a/public/assets/css/_project-sass/_project-Footer.scss
+++ b/public/assets/css/_project-sass/_project-Footer.scss
@@ -5,6 +5,8 @@
 // Apply to <footer> for styling
 .footer-Base{
 	color:#5e5b56;
+  float: left;
+  width: 100%;
 	
 	h1, h2, h3, h4{
   	color:#8b9a7a;
